# catlink_sdk

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
catlink_sdk/: __init__.py  auth.py  client.py  constants.py
catlink_sdk/models/: __init__.py  config.py  device.py  feeder.py  litterbox.py  scooper.py
docs/: PUBLISHING.md  process.md
example/: DEBUG_GUIDE.md  cli.py  config.toml.example  quick_debug.py
tests/: test_client.py
