[project]
name = "catlink-sdk"
version = "0.1.0"
description = "Python SDK for CatLink smart pet devices"
authors = [
    {name = "John Doe",email = "johndoe@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "aiohttp>=3.8.0",
    "cryptography>=41.0.0",
    "rich (>=14.0.0,<15.0.0)",
    "toml>=0.10.2",
    "croniter>=1.3.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
